@startuml

title __EDU's Class Diagram__\n

  namespace ub.edu {
    class ub.edu.Dau {
        + tirar()
    }
  }
  

  namespace ub.edu {
    class ub.edu.Joc {
        -jugador1: Jugador
        -jugador2: Jugador
        + jugar()
    }
  }
  

  namespace ub.edu {
    class ub.edu.Jugador {
        -dau: Dau
        + tirar()
    }
  }
  

  namespace ub.edu {
    class ub.edu.Main {
        {static} + main()
    }
  }
  
  ub.edu.Main --> ub.edu.Joc: usa
  ub.edu.Joc o--> ub.edu.Jugador : esPrimerJugador
  ub.edu.Joc o--> ub.edu.Jugador : esSegonJugador
  ub.edu.Jugador o--> ub.edu.Dau : te


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
